# tateti

./: .gitignore  13 - GENERAL PROTECTION (#GP):  CMakeLists.txt  HOW-TO  LICENSE  Makefile  cositasDelSDL.cpp  cositasDelSDL.h  main.cpp  tateti
GUI/: gui.cpp  gui.h
Tateti/: Tateti.cpp  Tateti.h  tateti.cpp  tateti.h
tateti/: Tateti.cpp  Tateti.h
tateti_struct/: Tateti.cpp  Tateti.h  tateti_struct.cpp  tateti_struct.h
